syntax = "proto3";

package libvirt;

option go_package = "govirt/app/proto/libvirtPb";

service LibvirtService {
    rpc GetLibVersion(GetLibVersionRequest) returns (GetLibVersionResponse);
    rpc GetLibvirtInfo(GetLibvirtInfoRequest) returns (GetLibvirtInfoResponse);
}

message GetLibVersionRequest {
}

message GetLibVersionResponse {
    string version = 1;
}

message GetLibvirtInfoRequest {
    string uuid = 1;
}

message GetLibvirtInfoResponse {
    string version = 1;
    string uri = 2;
    string capabilities = 3;
    string hostname = 4;
    string hypervisor = 5;
    string cpuModel = 6;
    string cpuCount = 7;
    string memorySize = 8;
}